fixed icon spacing

--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ li {
 .icon {
   position: relative;
   /* Adjust these values accordingly */
-  top: 7px;
+  top: 5px;
   left: -7px;
 }
 
